# my_package

./: .coverage  .importlinter  .pre-commit-config.yaml  README.md  Taskfile.yml  mise.toml  pyproject.toml
src/my_package/: __init__.py
src/my_package/moduleA/: __init__.py
src/my_package/moduleB/: __init__.py
src/my_package/utils/: __init__.py
tests/: test_my_package.py
